--- a/personal_portfolio/package.json
+++ b/personal_portfolio/package.json
@@ -23,8 +23,7 @@
     "react-dom": "18.2.0",
     "react-horizontal-scrolling-menu": "^3.2.0",
     "react-icons": "^4.4.0",
-    "react-multi-carousel": "^2.8.2",
-    "react-slideshow-image": "^4.0.4"
+    "react-multi-carousel": "^2.8.2"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.8",
