--- a/personal_portfolio/package.json
+++ b/personal_portfolio/package.json
@@ -12,6 +12,7 @@
     "@chakra-ui/react": "^2.2.8",
     "@emotion/react": "^11.10.0",
     "@emotion/styled": "^11.10.0",
+    "axios": "^0.27.2",
     "bootstrap": "^5.2.0",
     "emailjs-com": "^3.2.0",
     "framer-motion": "^6.5.1",
